# localhold

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  clippy.toml  deny.toml  localhold.example.toml  mise.toml  recall.example.toml  rust-toolchain.toml  rustfmt.toml
.github/: actionlint.yaml  gitleaks.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  gpu-release-gate.yml  outdated.yml  release-smoke.yml  release.yml
assets/brand/: BRAND.md  cli-preview.sh  cli.md  diagrams.md  tokens.css
assets/brand/explorations/: README.md  fortgen.py  round2.py  round3.py
assets/brand/icons/: README.md
benches/: embed_throughput.rs  memory_footprint.rs  search_latency.rs  store_batch.rs
benches/common/: mod.rs  seeder.rs
docs/: agent-api-v2.md  agent-api.md  architecture.md  browse.md  compatibility.md  embedding-providers.md  gpu-release-gate.md  installation.md  migrating-from-private-recall.md  operations.md  releasing.md  security-and-privacy.md
release/: cuda-linux-x86_64.json
script/: bootstrap.sh  check-publication-hygiene.sh  check-time-abstraction.sh  database_fixtures.py  dep-audit.sh  install.sh  package-release.py  prepare-cuda-runtime.py  release.py  test-postgres-smoke.sh  validate-cuda-runtime.py
script/tests/: test_cuda_release.py  test_database_fixtures.py  test_release.py
src/: background_tasks.rs  clock.rs  config.rs  consolidation.rs  doctor.rs  engine.rs  error.rs  fusion.rs  http_auth.rs  http_transport.rs  lib.rs  main.rs  ordering.rs  scoring.rs  types.rs  validation.rs
src/config/: embedding.rs  mod.rs  operator.rs  tests.rs
src/embedding/: batch.rs  factory.rs  limited.rs  mod.rs  noop.rs  openai.rs  orchestrator.rs  resilient.rs  retry.rs  status.rs
src/embedding/orchestrator/: batch.rs  mod.rs
src/reranker/: download.rs  gate.rs  mod.rs  onnx.rs  operator.rs  policy.rs  resilient.rs  runtime.rs
src/server/: mod.rs  params.rs  tests.rs
src/store/: admin.rs  backup.rs  conformance.rs  crud.rs  migration.rs  mod.rs  postgres.rs  postgres_migrations.rs  query.rs  schema.rs  search.rs  sqlite.rs  sqlite_lease.rs
src/store/vector/: mod.rs  sqlite_vec.rs
src/ui/: app.rs  editor.rs  mod.rs  theme.rs  view.rs
tests/: black_box.rs  reranker_smoke.rs
tests/fixtures/database-upgrades/: manifest.json  v0.1.0-beta.2-beta.3.postgres.sql  v0.1.0-beta.2-beta.3.sqlite.sql  v0.2.0.postgres.sql  v0.2.0.sqlite.sql
tests/integration/: access.rs  batch_and_count.rs  binary_smoke.rs  chaos_extended.rs  chaos_quick.rs  chaos_standard.rs  edge_cases.rs  embedding_batch_hardening.rs  embedding_races.rs  fault_injection.rs  helpers.rs  http_transport.rs  main.rs  protocol.rs  reembed.rs  schema_snapshots.rs  soak.rs  transport_matrix.rs  write_authorization.rs
tests/integration/concurrency_stress/: batch_atomicity.rs  has_embedding_consistency.rs  mod.rs  orchestrator_saturation.rs  readers_writers.rs  scope_reassign.rs  update_embed_race.rs  workload.rs
tests/integration/property/: access_policy.rs  lifecycle.rs  mod.rs  roundtrip.rs  strategies.rs  validation.rs
tests/integration/snapshots/: integration__schema_snapshots__mcp_tool_schema_admin_bulk_delete.snap  integration__schema_snapshots__mcp_tool_schema_admin_bulk_update.snap  integration__schema_snapshots__mcp_tool_schema_admin_cleanup_expired.snap  integration__schema_snapshots__mcp_tool_schema_admin_consolidate.snap  integration__schema_snapshots__mcp_tool_schema_admin_count.snap  integration__schema_snapshots__mcp_tool_schema_admin_history.snap  integration__schema_snapshots__mcp_tool_schema_admin_list.snap  integration__schema_snapshots__mcp_tool_schema_admin_migrate_metadata.snap  integration__schema_snapshots__mcp_tool_schema_admin_migration_report.snap  integration__schema_snapshots__mcp_tool_schema_admin_reassign_scope.snap  integration__schema_snapshots__mcp_tool_schema_admin_reembed.snap  integration__schema_snapshots__mcp_tool_schema_admin_scope_list.snap  integration__schema_snapshots__mcp_tool_schema_admin_scope_register.snap  integration__schema_snapshots__mcp_tool_schema_admin_v2_migrate_metadata.snap  integration__schema_snapshots__mcp_tool_schema_admin_v2_migration_report.snap  integration__schema_snapshots__mcp_tool_schema_brief.snap  integration__schema_snapshots__mcp_tool_schema_forget.snap  integration__schema_snapshots__mcp_tool_schema_handoff.snap  integration__schema_snapshots__mcp_tool_schema_read.snap  integration__schema_snapshots__mcp_tool_schema_read_many.snap  integration__schema_snapshots__mcp_tool_schema_recall.snap  integration__schema_snapshots__mcp_tool_schema_remember.snap  integration__schema_snapshots__mcp_tool_schema_remember_many.snap  integration__schema_snapshots__mcp_tool_schema_revise.snap  integration__schema_snapshots__response_schema_AdminMigrateMetadataResponse.snap  integration__schema_snapshots__response_schema_AdminV2MigrateMetadataResponse.snap  integration__schema_snapshots__response_schema_AgentCount.snap  integration__schema_snapshots__response_schema_BriefResponse.snap  integration__schema_snapshots__response_schema_CountResponse.snap  integration__schema_snapshots__response_schema_DeleteResponse.snap  integration__schema_snapshots__response_schema_DuplicateCandidateCard.snap  integration__schema_snapshots__response_schema_EvictExpiredResponse.snap  integration__schema_snapshots__response_schema_HandoffResponse.snap  integration__schema_snapshots__response_schema_HandoffSuggestion.snap  integration__schema_snapshots__response_schema_MatchAction.snap  integration__schema_snapshots__response_schema_MatchAssessment.snap  integration__schema_snapshots__response_schema_MatchDiagnostics.snap  integration__schema_snapshots__response_schema_MatchQuality.snap  integration__schema_snapshots__response_schema_MatchScoreBasis.snap  integration__schema_snapshots__response_schema_MemoryEntry.snap  (+16 more)
(+2 files in other folders)
